sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: not found: value inverse
	inverse=false
        ^AlgBubbleSort1:17: error: not found: value inverse
				inverse=true
                                ^AlgBubbleSort1:22: error: not found: value inverse
} while(inverse)
        ^